@@ -2,6 +2,7 @@
  - fix: set visibility to private based on available licenses
  - fix: calling the CLI 'dcoraid-upload-task --help' raised exception
  - enh: unselected license in upload dialog for example data
+ - enh: increase logging verbosity
 0.11.5
  - enh: increase logging verbosity
  - setup: bump dclab from 0.43.0 to 0.43.1
